--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    name: Build
+    name: Build & Deploy
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repo
@@ -21,27 +21,10 @@ jobs:
       run: |
         npm run prebuild --prefix web
         npm run build.prod --prefix web
-    - name: Archive Artifact
-      uses: actions/upload-artifact@master
-      with:
-        name: dist
-        path: ./  
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v1
-      - name: Download Artifact
-        uses: actions/download-artifact@master
-        with:
-          name: dist
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12'
-      - name: Install Firebase Tools
-        run: npm install -g firebase-tools
-      - name: Firebase Deploy
-        run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
+    - name: Install Firebase Tools
+      if: steps == success()
+      run: npm install -g firebase-tools 
+    - name: Firebase Deploy
+      if: steps == success()
+      run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
+
