--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,30 +9,39 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v1
+      
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
         node-version: '12'
+        
     - name: Install Dependencies
       id: dependencies
       run: |
         npm ci --prefix web
         npm ci --prefix functions
+        
     - name: Build
       id: builds
-      if: steps.dependencies.status == success()
+      if: job.status == success()
       run: |
         npm run lint --prefix web
         npm run lint --prefix functions
         npm run prebuild --prefix web
         npm run build.prod --prefix web
+        
     - name: Install Firebase Tools
       id: firebasetools
-      if: steps.builds.status == success()
-      run: npm install -g firebase-tools 
+      if: job.status == success()
+      run: |
+        npm install -g firebase-tools 
+        
     - name: Firebase Deploy
-      if: steps.firebasetools.status == success()
-      run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
+      id: deploy
+      if: job.status == success()
+      run: |
+        firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
+        
     - name: Dump steps context
       env:
         STEPS_CONTEXT: ${{ toJson(steps) }}
