--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -23,7 +23,7 @@ jobs:
         
     - name: Build
       id: builds
-      if: job.status == success()
+      if: success()
       run: |
         npm run lint --prefix web
         npm run lint --prefix functions
@@ -32,13 +32,13 @@ jobs:
         
     - name: Install Firebase Tools
       id: firebasetools
-      if: job.status == success()
+      if: success()
       run: |
         npm install -g firebase-tools 
         
     - name: Firebase Deploy
       id: deploy
-      if: job.status == success()
+      if: success()
       run: |
         firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
         
