--- a/web/package.json
+++ b/web/package.json
@@ -17,11 +17,13 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^5.2.3",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "core-js": "^2.5.4",
+    "firebase": "^7.5.0",
     "ng-appversion": "1.2.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
