--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.803.20",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "firebase": "^7.5.0",
